Fix - Tollbar z-index

--- a/src/client/components/PlainMarkdownInput/PlainMarkdownInput.less
+++ b/src/client/components/PlainMarkdownInput/PlainMarkdownInput.less
@@ -61,7 +61,6 @@
   flex-wrap: wrap;
   flex: 1 0 auto;
   position: relative;
-  z-index: 10;
 }
 
 .react-markdown--toolbar .btn {
